--- a/index.html
+++ b/index.html
@@ -7,7 +7,54 @@
     <title>Tech3 WEEK1</title>
 </head>
 <body>
-    <h1>Welcome to Tech3</h1>
-    <h1>Here is Qianyue</h1>
+    
+<style>
+
+#lyrow { height:100vh;width: 100vw; } 
+#lyrow div { min-height: 18px;  } 
+#lyrow .image { max-width:80%;min-width:80%; } 
+#lyrow .video { max-width:80%;min-width:80%; } 
+
+</style>
+
+    <h1 >Welcome to Creative Tech 3<br></h1>
+<ul >
+    <li >Assignment 1</li>
+    <li >
+    <span style="display: inline !important;">Assignment 2</span></li>
+    <li >
+    <span style="display: inline !important;">Assignment 3</span></li>
+    <li >
+    <span style="display: inline !important;">Assignment 4</span></li>
+</ul>
+<div ></div>
+    <h1 >Assignment 1<br></h1>
+<div ></div>
+<div >
+    <h1 >Inspired by:</h1>
+<video class="video" src="https://www.youtube.com/clip/Ugyq7ueQd-eAjbqj7mt4AaABCQ" preload="preload" controls="controls"> </video>
+<div ></div></div>
+<div >
+    <h1 >Diagram</h1>
+    <img src="http://www.58html.com/folder/imgs/202112/eab7f303d632bda93f501818f48d1a30.png" class="image">
+    <img src="http://www.58html.com/folder/imgs/202112/4fb9bf914a481e5859d78dd2000b2a54.png" class="image">
+<div ></div></div>
+<div >
+    <h1 >code</h1>
+<video class="video" src="https://vimeo.com/656937166" preload="preload" controls="controls"> </video>
+<div ></div></div>
+<div >
+    <h1 >Connection<br></h1>
+    <img src="http://www.58html.com/folder/imgs/202112/37b1764ae4d2b4118a2682b61d9ce219.jpg" class="image">
+<div ></div></div>
+<div >
+    <h1 >Testing</h1>
+<video class="video" src="https://vimeo.com/656945164" preload="preload" controls="controls"> </video>
+<div ></div></div>
+<div ><br>
+    <h1 >Final<br></h1>
+<video class="video" src="https://vimeo.com/656945131" preload="preload" controls="controls"> </video>
+<div ></div></div>
+</div>
 </body>
 </html>
