--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div ></div>
 <div >
     <h1 >Inspired by:</h1>
-<video class="video" src="https://www.youtube.com/clip/Ugyq7ueQd-eAjbqj7mt4AaABCQ" preload="preload" controls="controls"> </video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kV8v2GKC8WA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <div ></div></div>
 <div >
     <h1 >Diagram</h1>
@@ -41,7 +41,7 @@
 <div ></div></div>
 <div >
     <h1 >code</h1>
-<video class="video" src="https://vimeo.com/656937166" preload="preload" controls="controls"> </video>
+<iframe src="https://player.vimeo.com/video/656937166" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <div ></div></div>
 <div >
     <h1 >Connection<br></h1>
@@ -49,11 +49,11 @@
 <div ></div></div>
 <div >
     <h1 >Testing</h1>
-<video class="video" src="https://vimeo.com/656945164" preload="preload" controls="controls"> </video>
+<iframe src="https://player.vimeo.com/video/656945164" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <div ></div></div>
 <div ><br>
     <h1 >Final<br></h1>
-<video class="video" src="https://vimeo.com/656945131" preload="preload" controls="controls"> </video>
+<iframe src="https://player.vimeo.com/video/656945131" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 <div ></div></div>
 </div>
 </body>
