--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <div ></div></div>
 <div >
     <h1 >Diagram</h1>
-    <img src="http://www.58html.com/folder/imgs/202112/eab7f303d632bda93f501818f48d1a30.png" class="image">
-    <img src="http://www.58html.com/folder/imgs/202112/4fb9bf914a481e5859d78dd2000b2a54.png" class="image">
+    <img src="/Diagram1.png" class="image">
+    <img src="/diagram2.png" class="image">
 <div ></div></div>
 <div >
     <h1 >code</h1>
@@ -45,7 +45,7 @@
 <div ></div></div>
 <div >
     <h1 >Connection<br></h1>
-    <img src="http://www.58html.com/folder/imgs/202112/37b1764ae4d2b4118a2682b61d9ce219.jpg" class="image">
+    <img src="/connection.jpg" class="image">
 <div ></div></div>
 <div >
     <h1 >Testing</h1>
