--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div ></div></div>
 <div >
     <h1 >Diagram</h1>
-    <img src="Fall2021-Tech3/Diagram1.png" class="image">
-    <img src="Fall2021-Tech3/diagram2.png" class="image">
+    <img src="/Fall2021-Tech3/Diagram1.png" class="image">
+    <img src="/Fall2021-Tech3/diagram2.png" class="image">
 <div ></div></div>
 <div >
     <h1 >code</h1>
@@ -44,7 +44,7 @@
 <div ></div></div>
 <div >
     <h1 >Connection<br></h1>
-    <img src="Fall2021-Tech3/connection.jpg" class="image">
+    <img src="/Fall2021-Tech3/connection.jpg" class="image">
 <div ></div></div>
 <div >
     <h1 >Testing</h1>
