--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     
 <style>
 
-#lyrow { height:100vh;width: 100vw; } 
-#lyrow div { min-height: 18px;  } 
-#lyrow .image { max-width:80%;min-width:80%; } 
+{ min-height: 18px;  } 
+.image {max-width:80%; min-width:80%; } 
 
 </style>
 
