--- a/index.html
+++ b/index.html
@@ -7,52 +7,96 @@
     <title>Tech3 WEEK1</title>
 </head>
 <body>
-    
-<style>
 
-{ min-height: 18px;  } 
-img.image {max-width:80%;} 
+    <style>
+        img.image {
+            max-width: 80%;
+        }
+    </style>
 
-</style>
+    <h1>Welcome to Creative Tech 3<br></h1>
 
-    <h1 >Welcome to Creative Tech 3<br></h1>
-<ul >
-    <li >Assignment 1</li>
-    <li >
-    <span style="display: inline !important;">Assignment 2</span></li>
-    <li >
-    <span style="display: inline !important;">Assignment 3</span></li>
-    <li >
-    <span style="display: inline !important;">Assignment 4</span></li>
-</ul>
-<div ></div>
-    <h1 >Assignment 1<br></h1>
-<div ></div>
-<div >
-    <h1 >Inspired by:</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kV8v2GKC8WA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<div ></div></div>
-<div >
-    <h1 >Diagram</h1>
-    <img src="/Fall2021-Tech3/Diagram1.png" class="image">
-    <img src="/Fall2021-Tech3/diagram2.png" class="image">
-<div ></div></div>
-<div >
-    <h1 >code</h1>
-<iframe src="https://player.vimeo.com/video/656937166" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<div ></div></div>
-<div >
-    <h1 >Connection<br></h1>
-    <img src="/Fall2021-Tech3/connection.jpg" class="image">
-<div ></div></div>
-<div >
-    <h1 >Testing</h1>
-<iframe src="https://player.vimeo.com/video/656945164" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<div ></div></div>
-<div ><br>
-    <h1 >Final<br></h1>
-<iframe src="https://player.vimeo.com/video/656945131" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<div ></div></div>
-</div>
+    <ul>
+        <li><a href="#a">Assignment 1</a></li>
+        <li><span style="display: inline !important;"><a href="#b">Assignment 2</a></span></li>
+        <li><span style="display: inline !important;">Assignment 3</span></li>
+        <li> <span style="display: inline !important;">Assignment 4</span></li>
+    </ul>
+
+    <div></div>
+
+    <h1 id="a">Assignment 1<br></h1>
+
+    <div></div>
+
+    <div>
+        <h2>Inspired by:<br></h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kV8v2GKC8WA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div></div>
+    </div>
+
+    <div>
+        <h2>Diagram</h2>
+        <img src="/Fall2021-Tech3/Diagram1.png" class="image">
+        <img src="/Fall2021-Tech3/diagram2.png" class="image">
+        <div></div>
+    </div>
+
+    <div>
+        <h2>code</h2>
+        <iframe src="https://player.vimeo.com/video/656937166" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <div></div>
+    </div>
+
+    <div>
+        <h2>Connection<br></h2>
+        <img src="/Fall2021-Tech3/connection.jpg" class="image">
+        <div></div>
+    </div>
+
+    <div>
+        <h2>Testing</h2>
+        <iframe src="https://player.vimeo.com/video/656945164" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+
+    <div>
+        <h2>Final</h2>
+        <iframe src="https://player.vimeo.com/video/656945131" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+
+    <div></div>
+
+    <h1 id="b">Assignment 2: Accerate Simnulation<br></h1>
+
+    <div></div>
+
+    <div>
+        <p>There is an island .. .. ..</p>
+        <div></div>
+    </div>
+
+    <div>
+        <h2>Piling from day to night</h2>
+        <iframe src="https://player.vimeo.com/video/657027064" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+
+    <div>
+        <h2>Piling and Piling..</h2>
+        <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+
+    <div>
+        <h2>Let's look closer</h2>
+        <iframe src="https://player.vimeo.com/video/657013350" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+
+    <div>
+        <h2>The Key Moment: The emergence of a new road</h2>
+        <img src="/Fall2021-Tech3/road.gif" class="image">
+    </div>
+
+    <div>
+        <h2>Sound Simulation</h2>
+        <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+
 </body>
 </html>
