--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div>
         <h2>The Key Moment: The emergence of a new road</h2>
-        <img src="/Fall2021-Tech3/road.gif" class="image">
+        <img src="/Fall2021-Tech3/road.gif">
     </div>
 
     <div>
