--- a/index.html
+++ b/index.html
@@ -71,18 +71,14 @@
     <div></div>
 
     <div>
-        <p>There is an island .. .. ..</p>
+        <p>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</p>
         <div></div>
     </div>
 
     <div>
-        <h2>Piling from day to night</h2>
+        <h2>The garbage piling from day to night</h2>
         <iframe src="https://player.vimeo.com/video/657027064" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
-
-    <div>
-        <h2>Piling and Piling..</h2>
-        <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
 
     <div>
         <h2>Let's look closer</h2>
@@ -90,13 +86,17 @@
     </div>
 
     <div>
-        <h2>The Key Moment: The emergence of a new road</h2>
-        <img src="/Fall2021-Tech3/road.gif">
-    </div>
-
-    <div>
-        <h2>Sound Simulation</h2>
+        <p>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</p>
         <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
 
+     <div>
+        <h2>The garbage piling and piling...until one day..</h2>
+        <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+
+      <div>
+        <h2>The Key Moment: The emergence of a new road!!</h2>
+        <img src="/Fall2021-Tech3/road.gif">
+    </div>
+    
 </body>
 </html>
