--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
     <div></div>
 
     <div>
-        <h2>Inspired by:<br></h2>
+        <h3>Inspired by:<br></h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/kV8v2GKC8WA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div></div>
     </div>
 
     <div>
-        <h2>Diagram</h2>
+        <h3>Diagram</h3>
         <img src="/Fall2021-Tech3/Diagram1.png" class="image">
         <img src="/Fall2021-Tech3/diagram2.png" class="image">
         <div></div>
     </div>
 
     <div>
-        <h2>code</h2>
+        <h3>code</h3>
         <iframe src="https://player.vimeo.com/video/656937166" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         <div></div>
     </div>
 
     <div>
-        <h2>Connection<br></h2>
+        <h3>Connection<br></h3>
         <img src="/Fall2021-Tech3/connection.jpg" class="image">
         <div></div>
     </div>
 
     <div>
-        <h2>Testing</h2>
+        <h3>Testing</h3>
         <iframe src="https://player.vimeo.com/video/656945164" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h2>Final</h2>
+        <h3>Final</h3>
         <iframe src="https://player.vimeo.com/video/656945131" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
@@ -71,30 +71,30 @@
     <div></div>
 
     <div>
-        <p>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</p>
+        <h3>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</h3>
         <div></div>
     </div>
 
     <div>
-        <h2>The garbage piling from day to night</h2>
+        <h3>The garbage piling from day to night</h3>
         <iframe src="https://player.vimeo.com/video/657027064" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h2>Let's look closer</h2>
+        <h3>Let's look closer</h3>
         <iframe src="https://player.vimeo.com/video/657013350" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <p>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</p>
+        <h3>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</h3>
         <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
 
      <div>
-        <h2>The garbage piling and piling...until one day..</h2>
+        <h3>The garbage piling and piling...until one day..</h3>
         <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
 
       <div>
-        <h2>The Key Moment: The emergence of a new road!!</h2>
+        <h3>The Key Moment: The emergence of a new road!!</h3>
         <img src="/Fall2021-Tech3/road.gif">
     </div>
     
