--- a/index.html
+++ b/index.html
@@ -82,21 +82,27 @@
 
     <div>
         <h3>Let's look closer</h3>
-        <iframe src="https://player.vimeo.com/video/657013350" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/657013350" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
         <h3>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</h3>
-        <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+        <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
 
-     <div>
-        <h3>The garbage piling and piling...until one day..</h3>
-        <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+    <div>
+        <h3>The garbage piling and piling...</h3>
+        <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
 
-      <div>
-        <h3>The Key Moment: The emergence of a new road!!</h3>
+    <div>
+        <h3>It was a moment that no one noticed at the time but was destined to influence history：the emergence of a road!!</h3>
         <img src="/Fall2021-Tech3/road.gif">
     </div>
-    
+
+    <div>
+        <h3>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? The New World!</h3>
+        <iframe src="https://player.vimeo.com/video/657147499" width="560" height="315"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>    </div>
+
 </body>
 </html>
