--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div></div>
-    <a href="#back">back</a>
+    <h3><a href="#back">back</a></h3>
     <div></div>
 
     <h1 id="b">Assignment 2: Accerate Simnulation<br></h1>
@@ -84,7 +84,7 @@
 
     <div>
         <h3>Let's look closer</h3>
-        <iframe src="https://player.vimeo.com/video/657013350" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/657013350" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
@@ -108,7 +108,7 @@
     </div>
 
     <div></div>
-    <a href="#back">back</a>
+    <h3><a href="#back">back</a></h3>
 
 </body>
 </html>
