--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <ul>
         <li><a href="#a">Assignment 1</a></li>
         <li><span style="display: inline !important;"><a href="#b">Assignment 2</a></span></li>
-        <li><span style="display: inline !important;">Assignment 3</span></li>
-        <li> <span style="display: inline !important;">Assignment 4</span></li>
+        <li><span style="display: inline !important;"><a href="#c"></a>Assignment 3</a></span></li>
+        <li> <span style="display: inline !important;"><a href="#d"></a>Assignment 4</a></span></li>
     </ul>
 
     <div></div>
@@ -73,7 +73,8 @@
     <div></div>
 
     <div>
-        <h3>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</h3>
+        <h3>Concept</h3>
+        <p>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</p>
         <div></div>
     </div>
 
@@ -105,6 +106,65 @@
     <div>
         <h3>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? The New World!</h3>
         <iframe src="https://player.vimeo.com/video/657147499" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
+
+    <div></div>
+    <h2><a href="#back">back</a></h3>
+
+    <h1 id="c">Assignment 3<br></h1>
+
+    <div></div>
+
+    <div>
+        <h3>Concept</h3>
+        <p></p>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Material</h3>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Testing</h3>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Code</h3>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Final: Part A</h3>
+        <div></div>
+    </div>
+
+    <div></div>
+    <h2><a href="#back">back</a></h3>
+
+    <h1 id="d">Assignment 4<br></h1>
+
+    <div></div>
+
+    <div>
+        <h3>Concept</h3>
+        <p>Using shader to make a hotpot!!🍲</p>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Code</h3>
+        <iframe src="https://player.vimeo.com/video/658000425" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+        <div></div>
+    </div>
+
+    <div>
+        <h3>Final</h3>
+        <img src="/Fall2021-Tech3/hotpot1-2.gif">
+        <img src="/Fall2021-Tech3/hotpot2.gif">
+        <div></div>
     </div>
 
     <div></div>
