--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         img.image {
             max-width: 80%;
+            max-height: 80%;
         }
     </style>
 
@@ -19,8 +20,8 @@
     <ul>
         <li><a href="#a">Assignment 1</a></li>
         <li><span style="display: inline !important;"><a href="#b">Assignment 2</a></span></li>
-        <li><span style="display: inline !important;"><a href="#c"></a>Assignment 3</a></span></li>
-        <li> <span style="display: inline !important;"><a href="#d"></a>Assignment 4</a></span></li>
+        <li><span style="display: inline !important;"><a href="#c">Assignment 3</a></span></li>
+        <li><span style="display: inline !important;"><a href="#d">Assignment 4</a></span></li>
     </ul>
 
     <div></div>
@@ -68,7 +69,7 @@
     <h2><a href="#back">back</a></h2>
     <div></div>
 
-    <h1 id="b">Assignment 2: Accerate Simnulation<br></h1>
+    <h1 id="b">Assignment 2: Accerate Simulation<br></h1>
 
     <div></div>
 
@@ -104,7 +105,8 @@
     </div>
 
     <div>
-        <h3>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? The New World!</h3>
+        <h3>Until...</h3>
+        <p>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? A New World!</p>
         <iframe src="https://player.vimeo.com/video/657147499" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
@@ -117,29 +119,27 @@
 
     <div>
         <h3>Concept</h3>
-        <p></p>
-        <div></div>
+        <p>In this worldview, humans and machines live together. While machines have been able to read human emotions through various kinds of recognition, they have not been able to learn to read the emotions of their own kind. So robots give the electronic pets they keep chips that translate emotions. These pets have sensors that are directly connected to their owners in order to sense emotions and compile the emotions expressed by the robots on the other side through their pets to their owners. But the difference with their owners is that they know how to show it. On the street, you will often see two expressionless robots and their emotional pets.</p>        <div></div>
+        <img src="/Fall2021-Tech3/a3concept.jpg">
     </div>
 
     <div>
         <h3>Material</h3>
-        <div></div>
+        <img src="/Fall2021-Tech3/material.jpeg">
     </div>
 
     <div>
-        <h3>Testing</h3>
+        <h3>Process</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cpBIp_YA43Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div></div>
     </div>
 
     <div>
         <h3>Code</h3>
+        <iframe src="https://player.vimeo.com/video/658038702" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
         <div></div>
     </div>
 
-    <div>
-        <h3>Final: Part A</h3>
-        <div></div>
-    </div>
 
     <div></div>
     <h2><a href="#back">back</a></h2>
@@ -162,8 +162,8 @@
 
     <div>
         <h3>Final</h3>
+        <img src="/Fall2021-Tech3/hotpot2.gif"><br>
         <img src="/Fall2021-Tech3/hotpot1-2.gif">
-        <img src="/Fall2021-Tech3/hotpot2.gif">
         <div></div>
     </div>
 
