--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
     </div>
 
     <div>
-        <h3>It was a moment that no one noticed at the time but was destined to influence history：the emergence of a road!!</h3>
+        <h3>It was a moment that no one noticed at the time but was destined to influence history: the emergence of a road!!</h3>
         <img src="/Fall2021-Tech3/road.gif">
     </div>
 
     <div>
-        <h3>Until...</h3>
+        <h3>Until..</h3>
         <p>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? A New World!</p>
         <iframe src="https://player.vimeo.com/video/657147499" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
