--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         img.image {
             max-width: 80%;
-            max-height: 80%;
+            max-height: 500px;
         }
     </style>
 
