--- a/index.html
+++ b/index.html
@@ -75,38 +75,42 @@
 
     <div>
         <h3>Concept</h3>
-        <p>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. There was no garbage disposal station here, so they could only throw garbage into the sea...</p>
+        <p>Long long time ago, there was an island. The inhabitants treated this island as the whole world and they lived here happily. </p>
+        <p>There was no garbage disposal station here, so they could only throw garbage into the sea...</p>
         <div></div>
     </div>
 
+
     <div>
-        <h3>The garbage piling from day to night</h3>
+        <h3>Process</h3>
+        <p>The garbage piling from day to night</p>
         <iframe src="https://player.vimeo.com/video/657027064" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h3>Let's look closer</h3>
+        <p>Let's look closer</p>
         <iframe src="https://player.vimeo.com/video/657013350" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h3>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</h3>
+        <p>The islanders don't see anything wrong with what they're doing, because the sound of garbage entering the water is so beautiful, almost like a gift from the muse!!</p>
         <iframe src="https://player.vimeo.com/video/657120915" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h3>The garbage piling and piling...</h3>
+        <p>The garbage piling and piling...</p>
         <iframe src="https://player.vimeo.com/video/657013216" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
     <div>
-        <h3>It was a moment that no one noticed at the time but was destined to influence history: the emergence of a road!!</h3>
+        <p>It was a moment that no one noticed at the time but was destined to influence history: the emergence of a road!!</p>
         <img src="/Fall2021-Tech3/road.gif">
     </div>
 
     <div>
-        <h3>Until..</h3>
-        <p>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. Look what is at the end of the road? A New World!</p>
+        <p>Until..</p>
+        <p>Long, long after, the islands are buried in garbage. The islanders had no choice but to walk on the garbage every day. That's when one of the islanders found a new path. </p>
+        <p>Look what is at the end of the road? A New World!</p>
         <iframe src="https://player.vimeo.com/video/657147499" width="560" height="315" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
     </div>
 
