--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <div>
         <h3>Diagram</h3>
-        <img src="/resources/Diagram1.png" class="image">
-        <img src="/resources/diagram2.png" class="image">
+        <img src="qqUncodable/resources/Diagram1.png" class="image">
+        <img src="resources/diagram2.png" class="image">
         <div></div>
     </div>
 
