--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div>
         <h3>Diagram</h3>
-        <img src="qqUncodable/resources/Diagram1.png" class="image">
+        <img src="resources/Diagram1.png" class="image">
         <img src="resources/diagram2.png" class="image">
         <div></div>
     </div>
@@ -51,7 +51,7 @@
 
     <div>
         <h3>Connection<br></h3>
-        <img src="/resources/connection.jpg" class="image">
+        <img src="resources/connection.jpg" class="image">
         <div></div>
     </div>
 
@@ -104,7 +104,7 @@
 
     <div>
         <p>It was a moment that no one noticed at the time but was destined to influence history: the emergence of a road!!</p>
-        <img src="/resources/road.gif">
+        <img src="resources/road.gif">
     </div>
 
     <div>
@@ -123,14 +123,14 @@
 
     <div>
         <h3>Concept</h3>
-        <img src="/resources/concept.jpg" class="image">
+        <img src="resources/concept.jpg" class="image">
         <p>In this worldview, humans and machines live together. While machines have been able to read human emotions through various kinds of recognition, they have not been able to learn to read the emotions of their own kind. So robots give the electronic pets they keep chips that translate emotions. These pets have sensors that are directly connected to their owners in order to sense emotions and compile the emotions expressed by the robots on the other side through their pets to their owners. But the difference with their owners is that they know how to show it. On the street, you will often see two expressionless robots and their emotional pets.</p>        <div></div>
-        <img src="/resources/a3concept.jpg" class="image">
+        <img src="resources/a3concept.jpg" class="image">
     </div>
 
     <div>
         <h3>Material</h3>
-        <img src="/resources/material.jpeg" class="image">
+        <img src="resources/material.jpeg" class="image">
     </div>
 
     <div>
@@ -167,8 +167,8 @@
 
     <div>
         <h3>Final</h3>
-        <img src="/resources/hotpot2.gif"><br>
-        <img src="/resources/hotpot1-2.gif">
+        <img src="resources/hotpot2.gif"><br>
+        <img src="resources/hotpot1-2.gif">
         <div></div>
     </div>
 
