--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 
     <div>
         <h3>Final</h3>
+        <p>Oops..So spicy🥵</p>
         <img src="resources/hotpot2.gif"><br>
         <img src="resources/hotpot1-2.gif">
         <div></div>
